Health check and config

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
 PORT={port}
+
 SIGNATURE={signature}
-BROKER_URL={broker_url}
-BROKER_QUEUE={broker_queue}
-HEARTBEAT_INTERVAL={heartbeat_interval}
-RECONNECT_TIME={reconnect_time}
-DEFAULT_USER={default_user}
-DEFAULT_PASS={default_pass}
+
+DATA_BASE_TYPE={database_type}
+DATABASE_HOST={database_host}
+DATABASE_PORT={database_port}
+DATABASE_USERNAME={postgres_user}
+DATABASE_PASSWORD={postgres_pass}
+DATABASE_NAME={postgres_db}
