Added logged support

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 PORT={port}
 
+LOG_LEVEL={'dev' || 'combined' || 'common' || 'short' || 'tiny'}
+
 SIGNATURE={signature}
 
 DATA_BASE_TYPE={database_type}
