--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,8 @@ PORT={port}
 LOG_LEVEL={'dev' || 'combined' || 'common' || 'short' || 'tiny'}
 
 SIGNATURE={signature}
+ACCESS_TOKEN_EXPIRES_IN={access_token_expires_in}
+REFRESH_TOKEN_EXPIRES_IN={refresh_token_expires_in}
 
 DATA_BASE_TYPE={database_type}
 DATABASE_HOST={database_host}
