--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.5.6",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
